checkout list refactor
